--- a/g3d/translations/g3d_es.txt
+++ b/g3d/translations/g3d_es.txt
@@ -19,17 +19,17 @@
 "Luego pinche en el icono del script y seleccione un boceto para cada vista.",
 "Finalmente, pulse OK para generar el sólido.",
 "Documentación:",
-"Offset FR",
+"Offset",
 "Es la distancia desde la cual empezará la extrusión en el eje Y (desplazamiento en Y)",
-"Longitud FR",
+"Longitud",
 "Es la distancia total de extrusión frontal (en el eje Y), que siempre será mayor que el Offset Frontal",
-"Offset LAT",
+"Offset",
 "Es la distancia desde la cual empezará la extrusión en el eje X (desplazamiento en X)",
-"Longitud LAT",
+"Longitud",
 "Es la distancia total de extrusión lateral (en el eje X), que siempre será mayor que el Offset Lateral",
-"Offset PL",
+"Offset",
 "Es la distancia desde la cual empezará la extrusión en el eje Z (desplazamiento en Z)",
-"Longitud PL",
+"Longitud",
 "Es la distancia total de extrusión en planta (en el eje Z), que siempre será mayor que el Offset en Planta"
 "Pieza3D",
 "VistasPieza3D"
