--- a/g3d/translations/g3d_en.txt
+++ b/g3d/translations/g3d_en.txt
@@ -9,7 +9,7 @@
 "Plan view - (Top/Bott):",
 "Check this box if you want to activate the plan view and assign it a sketch",
 "Tol. 3D (mm.):",
-"Length in mm. This should not influence the final object. If you do not need this tolerance, set this value to 0",
+"Length in mm for over-extrusion. This should not influence the final object. If you do not need this tolerance, set this value to 0",
 "Make a new group (folder) with views (sketches)",
 "Hide views when generating the solid",
 "Fusion (intersection)",
